# terra

./: .gitignore  compile.sh  compose.jobs.yaml  compose.yaml  pyproject.toml  requirements.txt  services.dev.yaml  services.prod.yaml
.github/workflows/: deploy.yml  deploy_api.yml  deploy_app.yml  deploy_docker.yml  deploy_jobs.yml  deploy_shared.yml  deploy_svc.yml  news_graph.yml  news_scraper.yml
api/: Dockerfile  config.py  main.py  pyproject.toml  requirements.in  requirements.txt  utils.py
api/clients/: postgres.py  redis.py
api/crud/: cache.py  database.py  embeddings.py  sql.py
api/routers/: chat.py  chats.py  users.py
api/src/: Dockerfile
api/src/api/: auth.py  clients.py  config.py  main.py  utils.py
app/: Dockerfile  ai.py  compose.dev.yml  compose.prod.yaml  compose.prod.yml  compose.yaml  config.py  googleauth.py  main.py  pyproject.toml  requirements.in  requirements.txt  session.py  utils.py
app/chat/: graph.py  states.py
app/chat/agents/: archivist.py  base.py  engineer.py  (+3 more)
app/clients/: ai.py  postgres.py
app/dialogs/: googleauth.py  sel_thread.py
app/models/: chat_history.py  credentials.py  message.py  postgres.py  session.py  thread.py  user.py
app/src/: Dockerfile
jobs/: Dockerfile  build.sh  compose.yaml  pyproject.toml  requirements.in  requirements.txt  run.sh
shared/: pyproject.toml
shared/models/: __init__.py  message.py  podcast.py  session.py  thread.py
svc/: services.common.yaml  services.dev.yaml  services.prod.yaml
terra_common/: pyproject.toml
terra_common/src/terra_common/models/: session.py  user.py
(+162 files in other folders)
