[project]
name = "terra_common"
version = "0.1.1"
description = "Shared Resources for the Terra project"
requires-python = ">=3.12.4"
dependencies = [
    "pydantic~=2.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terra_common"]
